//编写proto文件
syntax = "proto3";

package grpc;
option go_package = "./gen";

message MysqlFirstReq{
  bytes param = 1;
}

message MysqlFirstRes{
  bytes data = 1;
}

service MysqlFirstService{
  rpc GetMysqlFirstData(MysqlFirstReq) returns (MysqlFirstRes){}
}

//终端执行命令
//E:\codeWork\go\test\project-grpc\api\proto> protoc --go_out=./gen --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_out=paths=source_relative data.proto